[gd_scene load_steps=23 format=3 uid="uid://3564isxovrhl"]

[ext_resource type="Script" uid="uid://cixl8tfo0k3mt" path="res://scenes/player/player_menu.gd" id="1_4uo60"]
[ext_resource type="FontFile" uid="uid://dij3t1qay4qr2" path="res://assets/Fonts/Qager-zrlmw.ttf" id="1_icpbw"]
[ext_resource type="PackedScene" uid="uid://cwy6f6pw0h25n" path="res://scenes/player/hud/inventory_menu.tscn" id="2_3cec4"]
[ext_resource type="Script" uid="uid://b722j2t0078v0" path="res://scenes/player/hud/health_count_label.gd" id="2_rkdjx"]
[ext_resource type="Texture2D" uid="uid://msdwqkuuj20u" path="res://assets/Complete_UI_Essential_Pack_Free/01_Flat_Theme/Sprites/UI_Flat_ButtonCross01a.png" id="2_xwxel"]
[ext_resource type="Texture2D" uid="uid://d11aiwg3d3lhm" path="res://resources/atlas/Male1_atlas.tres" id="3_g26ul"]
[ext_resource type="Script" uid="uid://dflytxb1udsvy" path="res://scenes/player/hud/main_menu.gd" id="5_3h3x0"]
[ext_resource type="PackedScene" uid="uid://060i5483b16j" path="res://scenes/player/hud/options_menu.tscn" id="5_o0cw4"]
[ext_resource type="Texture2D" uid="uid://dvkn12fte8b1c" path="res://assets/Pixel Art Wood/Transparent .PNG Files/wood_1.png" id="9_2q84c"]
[ext_resource type="Texture2D" uid="uid://l0stkl0i5j5t" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0000.png" id="10_xrq65"]
[ext_resource type="Texture2D" uid="uid://btdhp650j1edg" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0001.png" id="11_c7ux7"]
[ext_resource type="Texture2D" uid="uid://cdwl2bnodvfnq" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0002.png" id="12_rbd78"]
[ext_resource type="Texture2D" uid="uid://b00imjbcil6bw" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0003.png" id="13_i5h0x"]
[ext_resource type="Texture2D" uid="uid://dh8qjfjrtomuh" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0004.png" id="14_2cnnc"]
[ext_resource type="Texture2D" uid="uid://cifw53i72hkx3" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0005.png" id="15_mdlo3"]
[ext_resource type="Texture2D" uid="uid://4xogjyo0ly6q" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0006.png" id="16_4vg4m"]
[ext_resource type="Texture2D" uid="uid://dmqhe8m8wqy8q" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0007.png" id="17_0lxd1"]
[ext_resource type="Texture2D" uid="uid://b1kkkmrdjxtv7" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0008.png" id="18_nmnpn"]
[ext_resource type="Texture2D" uid="uid://djenr82ymnc30" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0009.png" id="19_1y13m"]
[ext_resource type="Texture2D" uid="uid://b8bvbbyaitp2g" path="res://assets/Pixel Art Gem Pack - Animated/GEM 2/BLUE/GEM 2 - BLUE - 0010.png" id="20_s050l"]

[sub_resource type="Theme" id="Theme_3h3x0"]
default_font = ExtResource("1_icpbw")

[sub_resource type="SpriteFrames" id="SpriteFrames_balow"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_xrq65")
}, {
"duration": 1.0,
"texture": ExtResource("11_c7ux7")
}, {
"duration": 1.0,
"texture": ExtResource("12_rbd78")
}, {
"duration": 1.0,
"texture": ExtResource("13_i5h0x")
}, {
"duration": 1.0,
"texture": ExtResource("14_2cnnc")
}, {
"duration": 1.0,
"texture": ExtResource("15_mdlo3")
}, {
"duration": 1.0,
"texture": ExtResource("16_4vg4m")
}, {
"duration": 1.0,
"texture": ExtResource("17_0lxd1")
}, {
"duration": 1.0,
"texture": ExtResource("18_nmnpn")
}, {
"duration": 1.0,
"texture": ExtResource("19_1y13m")
}, {
"duration": 1.0,
"texture": ExtResource("20_s050l")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="PlayerMenu" type="Panel" groups=["ui_main_menu"]]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3h3x0")
script = ExtResource("1_4uo60")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="StatsContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
dragging_enabled = false
dragger_visibility = 1

[node name="StatsVBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer/VSplitContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer/VSplitContainer/StatsVBoxContainer"]
layout_mode = 2
text = "Telos"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer/VSplitContainer/StatsVBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer/VSplitContainer/StatsVBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Vida: "
horizontal_alignment = 2

[node name="HealthCountLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer/VSplitContainer/StatsVBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "0/100"
horizontal_alignment = 2
script = ExtResource("2_rkdjx")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer/VSplitContainer"]
layout_mode = 2
texture = ExtResource("3_g26ul")
stretch_mode = 5

[node name="MenuButtonsContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainMenu" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/MenuButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1
script = ExtResource("5_3h3x0")

[node name="InventoryButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/MenuButtonsContainer/MainMenu"]
layout_mode = 2
text = "Inventário"

[node name="OptionsButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/MenuButtonsContainer/MainMenu"]
layout_mode = 2
text = "Opções"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/MenuButtonsContainer/MainMenu"]
layout_mode = 2
text = "Sair para a área de trabalho"
autowrap_mode = 2
clip_text = true

[node name="InventoryMenu" parent="PanelContainer/MarginContainer/HBoxContainer/MenuButtonsContainer" instance=ExtResource("2_3cec4")]
visible = false
layout_mode = 2

[node name="OptionsMenu" parent="PanelContainer/MarginContainer/HBoxContainer/MenuButtonsContainer" instance=ExtResource("5_o0cw4")]
visible = false
layout_mode = 2

[node name="CloseButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 288.0
offset_right = 320.0
offset_bottom = 32.0
texture_normal = ExtResource("2_xwxel")
stretch_mode = 0

[node name="Wood" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 191.0
offset_right = 162.0
offset_bottom = 255.0
scale = Vector2(0.686203, 0.686203)
texture = ExtResource("9_2q84c")

[node name="Gem" type="AnimatedSprite2D" parent="."]
position = Vector2(43, 215)
sprite_frames = SubResource("SpriteFrames_balow")

[connection signal="button_up" from="PanelContainer/MarginContainer/HBoxContainer/MenuButtonsContainer/MainMenu/InventoryButton" to="." method="_on_inventory_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/HBoxContainer/MenuButtonsContainer/MainMenu/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/HBoxContainer/MenuButtonsContainer/MainMenu/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="CloseButton" to="." method="_on_close_button_button_up"]
